--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.3",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "live-server": "^1.2.2",
     "mongoose": "^8.12.1",
     "react-router-dom": "^7.3.0"
   },
